# do not edit -- automatically generated by arch changelog
# arch-tag: automatic-ChangeLog--jgoerzen@complete.org--projects/missingh--head--0.5
#

2004-11-13 21:32:54 GMT	John Goerzen <jgoerzen@complete.org>	patch-31

    Summary:
      Removed old code
    Revision:
      missingh--head--0.5--patch-31


    modified files:
     ChangeLog libsrc/MissingH/Printf.hs


2004-11-13 21:28:50 GMT	John Goerzen <jgoerzen@complete.org>	patch-30

    Summary:
      Checkpointing printf
    Revision:
      missingh--head--0.5--patch-30


    modified files:
     ChangeLog libsrc/MissingH/Printf.hs


2004-11-13 21:23:26 GMT	John Goerzen <jgoerzen@complete.org>	patch-29

    Summary:
      Checkpointing again
    Revision:
      missingh--head--0.5--patch-29


    modified files:
     ChangeLog libsrc/MissingH/Printf.hs


2004-11-13 20:59:35 GMT	John Goerzen <jgoerzen@complete.org>	patch-28

    Summary:
      Have a working prototype
    Revision:
      missingh--head--0.5--patch-28


    modified files:
     ChangeLog libsrc/MissingH/Printf.hs


2004-11-13 20:41:25 GMT	John Goerzen <jgoerzen@complete.org>	patch-27

    Summary:
      Checkpointing
    Revision:
      missingh--head--0.5--patch-27


    modified files:
     ChangeLog libsrc/MissingH/Printf.hs


2004-11-13 20:23:12 GMT	John Goerzen <jgoerzen@complete.org>	patch-26

    Summary:
      Initial success
    Revision:
      missingh--head--0.5--patch-26


    modified files:
     ChangeLog debian/changelog debian/control debian/rules
     libsrc/MissingH/Printf.hs


2004-11-13 04:56:33 GMT	John Goerzen <jgoerzen@complete.org>	patch-25

    Summary:
      Added note
    Revision:
      missingh--head--0.5--patch-25


    modified files:
     ChangeLog libsrc/MissingH/Printf.hs


2004-11-13 04:44:11 GMT	John Goerzen <jgoerzen@complete.org>	patch-24

    Summary:
      Updated printf
    Revision:
      missingh--head--0.5--patch-24


    modified files:
     ChangeLog libsrc/MissingH/Printf.hs

